# StudyApp

./: CLAUDE.md  README.md  docker-compose.yml  package-lock.json
.claude/: settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
backend/: .env  alembic.ini  pyproject.toml
backend/.claude-flow/data/: pending-insights.jsonl
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  deps.py  main.py  seed.py
backend/app/api/v1/: __init__.py  cards.py  dashboard.py  decks.py  study.py  users.py
backend/app/models/: __init__.py  attempt.py  card.py  deck.py  generated_question.py  schedule_state.py  user.py
backend/app/schemas/: attempt.py  card.py  dashboard.py  deck.py  question.py  user.py
backend/app/services/: csv_import.py  generation.py  grading.py  scheduling.py  scoring.py
backend/app/services/ai/: anthropic_adapter.py  base.py  factory.py  fake.py  openai_adapter.py  prompts.py
backend/tests/: conftest.py  fake_ai.py  test_csv_import.py  test_scheduling.py  test_scoring.py  test_study_flow.py
mobile/: .env  App.tsx  app.json  package-lock.json  package.json  qr.html
mobile/.claude-flow/data/: pending-insights.jsonl
mobile/.claude-flow/sessions/: current.json
mobile/.expo/: settings.json
mobile/src/: theme.ts
mobile/src/api/: client.ts  endpoints.ts
mobile/src/components/: Button.tsx  MasteryBadge.tsx  QuestionCard.tsx
mobile/src/nav/: index.tsx
(+12 files in other folders)
